--- a/index.html
+++ b/index.html
@@ -1,23 +1,14 @@
-<!--<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>JS</title>  We use href in case of Anchor tag & link tag
-</head>
-<body>
-    <script src="script.js"></script>
-</body>
-</html>-->
+<!-- We can use href in case of Anchor tag & link tag -->
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
         <title>JS</title>
     </head>
     <body>
-        <script src="script.js"></script>
+        <script src="script_remake.js"></script>
     </body>
 </html>
